# sensors-node

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: ble.rs  config.rs  dhcp.rs  display.rs  kv_storage.rs  led.rs  lib.rs  mqtt.rs  net_time.rs  sensors.rs  storage.rs  system.rs  web.rs  wifi.rs
crates/esp32c6/: Cargo.toml
crates/esp32c6/.cargo/: config.toml
crates/esp32s3/: Cargo.toml
crates/esp32s3/.cargo/: config.toml
html/: index.html
src/: air_quality.rs  lib.rs  mqtt.rs  net_time.rs  sensors.rs  storage.rs  wifi.rs
