[package]
edition = "2024"
name = "sensors-node"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "sensors-node"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
static_cell      = "2.1.1"
heapless = "*"

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

bh1750 = "*"
bme680 = { git = "https://github.com/marcelbuesing/bme680", rev = "838d1eaeb14be76a8d325eafd7e0896299aa9e68" }
embedded-hal-bus = "0.3.0"

minimq = { version = "0.10.0", features = ["logging"]}
smoltcp-nal = "0.7.0"
# embassy-executor = "0.9.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
