[package]
edition = "2024"
name = "sensors_node_core"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "unstable"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
static_cell = "2.1.1"
heapless = { version = "0.9.2", features = ["serde"] }

defmt = "1.0.1"
esp-radio = { version = "0.17.0", features = [
    "ble",
    "coex",
    "defmt",
    "esp-alloc",
    "smoltcp",
    "unstable",
    "wifi",
] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

bh1750 = "*"
bme680 = { git = "https://github.com/marcelbuesing/bme680", rev = "838d1eaeb14be76a8d325eafd7e0896299aa9e68" }
embedded-hal-bus = "0.3.0"
embedded-io-async = { version = "0.7.0" }
embedded-time = { version = "0.12.1" }

mqtt-client = { path = "../../../../_mqtt/mqtt-client", features = [
    "embassy",
    "defmt",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
ekv = { version = "1.0.0", features = [
    "page-size-4096",
    "erase-value-255",
    "max-page-count-512",
    "scratch-page-count-1",
    "max-key-size-16",
    "max-value-size-256",
    "max-chunk-size-512",
    "branching-factor-3",
    "align-4",
    "crc",
    "defmt",
] }
embedded-storage = { version = "0.3.1" }
# # For ekv
embassy-sync-06 = { package = "embassy-sync", version = "0.6.0", features = [
    "defmt",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.1", features = ["defmt", "use-defmt"] }
esp-storage = { version = "0.8.0", features = ["defmt"] }
veml7700 = { version = "*" }
sht4x = { version = "*", features = ["defmt"] }
bmp390 = { version = "0.4.1", default-features = false, features = [
    "embassy-time",
    "sync",
] }
uom = { version = "0.36.0", default-features = false, features = ["f32", "si"] }
trouble-host = { version = "0.5.1", default-features = false, features = [
    "gatt",
    "peripheral",
    "central",
    "derive",
    "default-packet-pool-mtu-255",
    "trouble-host-macros",
] }
smart-leds = { version = "0.4.0" }
esp-hal-smartled = { version = "0.17.0", features = ["defmt"] }
rgb = { version = "0.8.52" }
picoserve = { git = "https://github.com/sammhicks/picoserve.git", rev = "d68a53550aa974e58cf4228b9d9424a5432558e1", features = [
    "defmt",
    "embassy",
] }
edge-dhcp = { version = "0.7.0" }
edge-nal = { version = "0.6.0" }

ssd1306 = { version = "0.10.0", optional = true }
embedded-graphics = { version = "*", features = ["defmt"], optional = true }

[features]
default = []
esp32s3 = ["esp-hal/esp32s3", "esp-radio/esp32s3", "esp-hal-smartled/esp32s3", "esp-storage/esp32s3"]
esp32c6 = ["esp-hal/esp32c6", "esp-radio/esp32c6", "esp-hal-smartled/esp32c6", "esp-storage/esp32c6"]
display = ["ssd1306", "embedded-graphics"]
