[package]
edition = "2024"
name = "sensors_node_esp32_c6"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "sensors-node"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32c6",
  "esp-radio",
] }
# embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
static_cell = "2.1.1"
# heapless = { version = "0.8.0" }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

# # bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
# #   "async",
# #   "macros",
# # ] }
# critical-section = "1.2.0"
# embedded-io = { version = "0.7.1", features = ["defmt"] }
# embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# # for more networking protocol support see https://crates.io/crates/edge-net
# bt-hci = "0.6.0"
# # esp-backtrace = { version = "0.18.1", features = [
# #   "defmt",
# #   "esp32c6",
# #   "panic-handler",
# # ] }
# # esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
# smoltcp = { version = "0.12.0", default-features = false, features = [
#   "defmt",
#   "medium-ethernet",
#   "multicast",
#   "proto-dhcpv4",
#   "proto-dns",
#   "proto-ipv4",
#   "socket-dns",
#   "socket-icmp",
#   "socket-raw",
#   "socket-tcp",
#   "socket-udp",
# ] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

# bh1750 = "*"
# bme680 = { git = "https://github.com/marcelbuesing/bme680", rev = "838d1eaeb14be76a8d325eafd7e0896299aa9e68" }
# embedded-hal-bus = "0.3.0"
# embedded-hal-async = { version = "*" }

# # minimq = { version = "0.10.0", features = ["logging"]}
# smoltcp-nal = "0.7.0"
embassy-executor = "0.9.1"
# rust-mqtt = { version = "*", features = ["v5", "defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
# embassy-futures = { version = "0.1.2", features = ["defmt"] }
# ekv = { version = "1.0.0", features = [
#   "page-size-4096",
#   "erase-value-255",
#   "max-page-count-512",
#   "scratch-page-count-1",
#   "max-key-size-8",
#   "max-value-size-256",
#   "max-chunk-size-512",
#   "branching-factor-3",
#   "align-4",
#   "crc",
#   "defmt",
# ] }
# embedded-storage = { version = "0.3.1" }
# # For ekv
# embassy-sync-06 = { package = "embassy-sync", version = "0.6.0", features = [
#   "defmt",
# ] }
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# postcard = { version = "1.1", features = ["defmt", "use-defmt"] }
# esp-storage = { version = "0.8.0", features = ["defmt", "esp32c6"] }
# veml7700 = { version = "*", default-features = false, features = [
#   "is_sync",
#   "lux_as_f32",
# ] }
sensors_node_core = { path = "../core/" }

# [dev-dependencies]
# embedded-test = { version = "0.7.0", features = [
#   "defmt",
#   "embassy",
#   "external-executor",
# ] }
