[package]
edition = "2024"
name = "sensors_node_esp32_c6"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "sensors-node"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32c6",
  "esp-radio",
] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
static_cell = "2.1.1"

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
trouble-host = { version = "0.5.0", default-features = false, features = [] }

embassy-sync = { version = "0.7.2", features = ["defmt"] }
sensors_node_core = { path = "../core/", features = ["esp32c6"] }

smart-leds = { version = "0.4.0" }
esp-hal-smartled = { version = "0.17.0", features = ["defmt", "esp32c6"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
