[package]
edition = "2024"
name         = "esp32s3"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32s3"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
static_cell = "2.1.1"

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
trouble-host = { version = "0.5.1", default-features = false, features = [] }

embassy-sync = { version = "0.7.2", features = ["defmt"] }
sensors_node_core = { path = "../core/", features = ["esp32s3"] }

esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }

smart-leds = { version = "0.4.0" }
esp-hal-smartled = { version = "0.17.0", features = ["defmt", "esp32s3"] }
heapless-08 = { version = "0.8.0", package = "heapless" }
edge-nal-embassy = { version = "0.8.1", default-features = false, features = [
  "proto-ipv4",
  "udp",
] }

embassy-embedded-hal = { version = "0.5.0", features = ["defmt", "time"] }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "defmt",
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }
